<?xml version="1.0"?>
<package format="2">
  <name>emergency_stop</name>
  <version>0.0.1</version>
  <description>This package's purpose is to publish an emergency stop command to stop the robot</description>
  
  <maintainer email="florentyovo0@example.com">Yawo Mawulikplimi</maintainer>
  
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend> 
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
