<?xml version="1.0"?>
<package format="2">
  <name>odom_moving</name>
  <version>0.0.1</version>
  <description>This package's purpose it to move a robot using the odometry. It uses the odom and cmd_vel nodes to reach the purpose </description>

  <maintainer email="florentyovo0@gmail.com">Yawo Mawulikplimi</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
